# paper_claims

./: .gitignore  CLAUDE.md  LICENSE  README.md  paper-claims.service  pyproject.toml
.claude/skills/paper-import/: SKILL.md
.claude/skills/paper-question/: SKILL.md
app/: __init__.py  config.py  graph.py  main.py  models.py  storage.py
app/static/: app.js  styles.css
app/templates/: base.html  claim_detail.html  graph.html  paper_detail.html  papers.html  problems.html  questions.html
scripts/: build_index.py  check.sh  init_data.py  screenshot.py  validate.py  verify_quotes.py
tasks/: lessons.md  todo.md
tests/: conftest.py  test_api.py  test_storage.py  test_validate.py
tests/fixtures/data/: problems.json  question_links.json  questions.json  relations.json  topics.json
tests/fixtures/data/papers/: arxiv-2101.00001.json  arxiv-2102.00002.json
